force-app/main/default/objects/Custom_Refund__c/Custom_Refund__c.object-meta.xml
<CustomObject>
    <label>Custom Refund</label>
    <nameField>
        <label>Custom Refund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>