force-app/main/default/objects/Custom_Refund__c/fields/IsCancelledRefund__c.field-meta.xml
<CustomField>
    <fullName>IsCancelledRefund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field returns boolean value, returns true if the order has give 100 percent discount before the fulfillment of the order</description>
    <label>Is Cancelled Refund</label>
    <type>Checkbox</type>
</CustomField>