force-app/main/default/objects/Custom_Refund__c/fields/Reference_ChangeOrder__c.field-meta.xml
<CustomField>
    <fullName>Reference_ChangeOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference ChangeOrder</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Custom Refunds</relationshipLabel>
    <relationshipName>Custom_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>