force-app/main/default/objects/Custom_Refund__c/fields/Reference_Order_Payment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Reference_Order_Payment_Summary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Payment Summary</label>
    <referenceTo>OrderPaymentSummary</referenceTo>
    <relationshipLabel>Custom Refunds</relationshipLabel>
    <relationshipName>Custom_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>