force-app/main/default/objects/Custom_Refund__c/fields/Reference_Refund__c.field-meta.xml
<CustomField>
    <fullName>Reference_Refund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Refund</label>
    <referenceTo>Refund</referenceTo>
    <relationshipLabel>Custom Refunds</relationshipLabel>
    <relationshipName>Custom_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>